fixed overflow issue with youtube title

--- a/src/components/UserCreatedCoursePage/UserCreatedCoursePage.css
+++ b/src/components/UserCreatedCoursePage/UserCreatedCoursePage.css
@@ -103,14 +103,29 @@
     justify-content: center;
     background-color: #F8F8F8;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 90vw;
     justify-content: center;
     border-radius: 30%;
+
+    font-size: 2em;
+    font-family: 'Montserrat';
+    font-weight: 800;
+
+    
     
     margin-top: 10vh;
     margin-bottom: 10vh;
     padding-top: 5vh;
     padding-bottom: 5vh;
+}
+
+.video-container h2 {
+    padding-bottom: 5vh;
+    overflow-wrap: break-word;
+    max-width: 50vw;
+    text-align: center;
 }
 
 .video-container iframe {
